--- a/Engine/Image/Engine-Image.vcxproj.filters
+++ b/Engine/Image/Engine-Image.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Private\TextureLoaderImpl.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\EXRCodec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Private\TextureUtilities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Private\EXRCodec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
