--- a/App/MaterialEditor/App-MaterialEditor.vcxproj
+++ b/App/MaterialEditor/App-MaterialEditor.vcxproj
@@ -46,6 +46,9 @@
     <ProjectReference Include="..\..\Engine\GraphicsUtils\Engine-GraphicsUtils.vcxproj">
       <Project>{5bd3cd7e-f27f-43b2-8bca-b9ce3047b507}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Engine\Image\Engine-Image.vcxproj">
+      <Project>{f72edd8b-e50b-44a1-b439-f92b45da940d}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Engine\ImGui\Engine-ImGui.vcxproj">
       <Project>{7f85a29a-8214-48e6-9531-db5a4d102df5}</Project>
     </ProjectReference>
