--- a/Engine/RenderPass/Engine-RenderPass.vcxproj.filters
+++ b/Engine/RenderPass/Engine-RenderPass.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Public\DrawPacket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\GrassRenderPass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Private\PostRenderPass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Private\GrassRenderPass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
