--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -51,6 +51,9 @@
 				PROFILING;
 				NOMINMAX;
 				_CRT_SECURE_NO_WARNINGS;
+
+				JPH_FLOATING_POINT_EXCEPTIONS_ENABLED;
+				JPH_OBJECT_STREAM;
 				%(PreprocessorDefinitions)
 			</PreprocessorDefinitions>
 
@@ -82,6 +85,7 @@
 		<ClCompile>
 			<PreprocessorDefinitions>
 				SHZ_DEBUG;
+				JPH_DEBUG_RENDERER;
 				%(PreprocessorDefinitions)
 			</PreprocessorDefinitions>
 		</ClCompile>
