--- a/Engine/Physics/Engine-Physics.vcxproj.filters
+++ b/Engine/Physics/Engine-Physics.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Public\Physics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\PhysicsEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
