--- a/Engine/Physics/Engine-Physics.vcxproj
+++ b/Engine/Physics/Engine-Physics.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Public\Physics.h" />
+    <ClInclude Include="Public\PhysicsBodyHandle.h" />
     <ClInclude Include="Public\PhysicsEvent.h" />
   </ItemGroup>
   <ItemGroup>
