--- a/Engine/Physics/Engine-Physics.vcxproj.filters
+++ b/Engine/Physics/Engine-Physics.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Public\PhysicsEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\PhysicsBodyHandle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
