--- a/Engine/Renderer/Engine-Renderer.vcxproj.filters
+++ b/Engine/Renderer/Engine-Renderer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Public\RenderData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\RenderResourceRegistry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Private\PipelineStateManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Private\RenderResourceRegistry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
